--- a/source/templates/default.jade
+++ b/source/templates/default.jade
@@ -46,9 +46,12 @@ script(type="text/javascript").
         if(recording) {
           recording = false
         }
-        recordRTC.stopRecording(function (audioVideoWebMURL) {
-            var recordedBlob = recordRTC.getBlob()
-            recordRTC.getDataURL(function(dataURL) { })
+        recordRTC.stopRecording(function (audioURL) {
+          var audio = document.getElementById("player")
+          audio.src = audioURL
+          audio.play()
+          var recordedBlob = recordRTC.getBlob()
+          recordRTC.getDataURL(function(dataURL) { })
         });
       }
     }
