--- a/source/templates/start.jade
+++ b/source/templates/start.jade
@@ -4,4 +4,4 @@ block content
   p.
     What's the story? 'Z'
   input#indicator(type="checkbox", checked=false, disabled=true)
-  #output
+  audio#player
