--- a/source/templates/start.jade
+++ b/source/templates/start.jade
@@ -5,3 +5,4 @@ block content
     What's the story? 'Z'
   input#indicator(type="checkbox", checked=false, disabled=true)
   audio#player(controls)
+  #output
